add_library(NiParticle STATIC
    NiCurve3.cpp
    NiCurve3.h
    NiCurve3.inl
    NiParticle.h
    NiParticleLibType.h
    NiParticlePCH.h
    NiParticleSDM.cpp
    NiParticleSDM.h
    NiPSAirFieldAirFrictionCtlr.cpp
    NiPSAirFieldAirFrictionCtlr.h
    NiPSAirFieldForce.cpp
    NiPSAirFieldForce.h
    NiPSAirFieldForce.inl
    NiPSAirFieldInheritedVelocityCtlr.cpp
    NiPSAirFieldInheritedVelocityCtlr.h
    NiPSAirFieldSpreadCtlr.cpp
    NiPSAirFieldSpreadCtlr.h
    NiPSAlignedQuadGenerator.cpp
    NiPSAlignedQuadGenerator.h
    NiPSAlignedQuadGenerator.inl
    NiPSAlignedQuadGeneratorKernelStruct.h
    NiPSAlignedQuadTextureKernelStruct.h
    NiPSBombForce.cpp
    NiPSBombForce.h
    NiPSBombForce.inl
    NiPSBoundUpdater.cpp
    NiPSBoundUpdater.h
    NiPSBoundUpdater.inl
    NiPSBoxEmitter.cpp
    NiPSBoxEmitter.h
    NiPSBoxEmitter.inl
    NiPSCollider.cpp
    NiPSCollider.h
    NiPSCollider.inl
    NiPSColliderDefinitions.h
    NiPSColliderHelpers.h
    NiPSColliderHelpers.inl
    NiPSCommonSemantics.cpp
    NiPSCommonSemantics.h
    NiPSCommonSemantics.inl
    NiPSConverter.cpp
    NiPSConverter.h
    NiPSConverter.inl
    NiPSCurveEmitter.cpp
    NiPSCurveEmitter.h
    NiPSCurveEmitter.inl
    NiPSCylinderEmitter.cpp
    NiPSCylinderEmitter.h
    NiPSCylinderEmitter.inl
    NiPSDragFieldForce.cpp
    NiPSDragFieldForce.h
    NiPSDragFieldForce.inl
    NiPSDragForce.cpp
    NiPSDragForce.h
    NiPSDragForce.inl
    NiPSEmitParticlesCtlr.cpp
    NiPSEmitParticlesCtlr.h
    NiPSEmitter.cpp
    NiPSEmitter.h
    NiPSEmitter.inl
    NiPSEmitterCtlr.cpp
    NiPSEmitterCtlr.h
    NiPSEmitterCtlr.inl
    NiPSEmitterDeclinationCtlr.cpp
    NiPSEmitterDeclinationCtlr.h
    NiPSEmitterDeclinationVarCtlr.cpp
    NiPSEmitterDeclinationVarCtlr.h
    NiPSEmitterFloatCtlr.cpp
    NiPSEmitterFloatCtlr.h
    NiPSEmitterLifeSpanCtlr.cpp
    NiPSEmitterLifeSpanCtlr.h
    NiPSEmitterLifeSpanVarCtlr.cpp
    NiPSEmitterLifeSpanVarCtlr.h
    NiPSEmitterPlanarAngleCtlr.cpp
    NiPSEmitterPlanarAngleCtlr.h
    NiPSEmitterPlanarAngleVarCtlr.cpp
    NiPSEmitterPlanarAngleVarCtlr.h
    NiPSEmitterRadiusCtlr.cpp
    NiPSEmitterRadiusCtlr.h
    NiPSEmitterRadiusVarCtlr.cpp
    NiPSEmitterRadiusVarCtlr.h
    NiPSEmitterRotAngleCtlr.cpp
    NiPSEmitterRotAngleCtlr.h
    NiPSEmitterRotAngleVarCtlr.cpp
    NiPSEmitterRotAngleVarCtlr.h
    NiPSEmitterRotSpeedCtlr.cpp
    NiPSEmitterRotSpeedCtlr.h
    NiPSEmitterRotSpeedVarCtlr.cpp
    NiPSEmitterRotSpeedVarCtlr.h
    NiPSEmitterSpeedCtlr.cpp
    NiPSEmitterSpeedCtlr.h
    NiPSEmitterSpeedFlipRatioCtlr.cpp
    NiPSEmitterSpeedFlipRatioCtlr.h
    NiPSEmitterSpeedVarCtlr.cpp
    NiPSEmitterSpeedVarCtlr.h
    NiPSFacingQuadGenerator.cpp
    NiPSFacingQuadGenerator.h
    NiPSFieldAttenuationCtlr.cpp
    NiPSFieldAttenuationCtlr.h
    NiPSFieldForce.cpp
    NiPSFieldForce.h
    NiPSFieldForce.inl
    NiPSFieldMagnitudeCtlr.cpp
    NiPSFieldMagnitudeCtlr.h
    NiPSFieldMaxDistanceCtlr.cpp
    NiPSFieldMaxDistanceCtlr.h
    NiPSFlagsHelpers.h
    NiPSFlagsHelpers.inl
    NiPSForce.cpp
    NiPSForce.h
    NiPSForce.inl
    NiPSForceActiveCtlr.cpp
    NiPSForceActiveCtlr.h
    NiPSForceBoolCtlr.cpp
    NiPSForceBoolCtlr.h
    NiPSForceCtlr.cpp
    NiPSForceCtlr.h
    NiPSForceCtlr.inl
    NiPSForceDefinitions.h
    NiPSForceFloatCtlr.cpp
    NiPSForceFloatCtlr.h
    NiPSForceHelpers.h
    NiPSForceHelpers.inl
    NiPSGravityFieldForce.cpp
    NiPSGravityFieldForce.h
    NiPSGravityFieldForce.inl
    NiPSGravityForce.cpp
    NiPSGravityForce.h
    NiPSGravityForce.inl
    NiPSGravityStrengthCtlr.cpp
    NiPSGravityStrengthCtlr.h
    NiPSKernelDefinitions.h
    NiPSMeshEmitter.cpp
    NiPSMeshEmitter.h
    NiPSMeshEmitter.inl
    NiPSMeshParticleSystem.cpp
    NiPSMeshParticleSystem.h
    NiPSMeshParticleSystem.inl
    NiPSMetrics.cpp
    NiPSMetrics.h
    NiPSParticleSystem.cpp
    NiPSParticleSystem.h
    NiPSParticleSystem.inl
    NiPSPlanarCollider.cpp
    NiPSPlanarCollider.h
    NiPSPlanarCollider.inl
    NiPSRadialFieldForce.cpp
    NiPSRadialFieldForce.h
    NiPSRadialFieldForce.inl
    NiPSResetOnLoopCtlr.cpp
    NiPSResetOnLoopCtlr.h
    NiPSSimulator.cpp
    NiPSSimulator.h
    NiPSSimulator.inl
    NiPSSimulatorCollidersStep.cpp
    NiPSSimulatorCollidersStep.h
    NiPSSimulatorCollidersStep.inl
    NiPSSimulatorFinalStep.cpp
    NiPSSimulatorFinalStep.h
    NiPSSimulatorForcesStep.cpp
    NiPSSimulatorForcesStep.h
    NiPSSimulatorForcesStep.inl
    NiPSSimulatorGeneralStep.cpp
    NiPSSimulatorGeneralStep.h
    NiPSSimulatorGeneralStep.inl
    NiPSSimulatorKernelHelpers.h
    NiPSSimulatorKernelHelpers.inl
    NiPSSimulatorMeshAlignKernelStruct.h
    NiPSSimulatorMeshAlignStep.cpp
    NiPSSimulatorMeshAlignStep.h
    NiPSSimulatorMeshAlignStep.inl
    NiPSSimulatorStep.cpp
    NiPSSimulatorStep.h
    NiPSSimulatorStep.inl
    NiPSSpawner.cpp
    NiPSSpawner.h
    NiPSSpawner.inl
    NiPSSphereEmitter.cpp
    NiPSSphereEmitter.h
    NiPSSphereEmitter.inl
    NiPSSphericalCollider.cpp
    NiPSSphericalCollider.h
    NiPSSphericalCollider.inl
    NiPSTorusEmitter.cpp
    NiPSTorusEmitter.h
    NiPSTorusEmitter.inl
    NiPSTurbulenceFieldForce.cpp
    NiPSTurbulenceFieldForce.h
    NiPSTurbulenceFieldForce.inl
    NiPSVolumeEmitter.cpp
    NiPSVolumeEmitter.h
    NiPSVolumeEmitter.inl
    NiPSVortexFieldForce.cpp
    NiPSVortexFieldForce.h
    NiPSVortexFieldForce.inl

    Kernels/NiPSAlignedQuadGeneratorKernelFF/NiPSAlignedQuadGeneratorKernelFF.h
    Kernels/NiPSAlignedQuadGeneratorKernelFV/NiPSAlignedQuadGeneratorKernelFV.h
    Kernels/NiPSAlignedQuadGeneratorKernelVF/NiPSAlignedQuadGeneratorKernelVF.h
    Kernels/NiPSAlignedQuadGeneratorKernelVV/NiPSAlignedQuadGeneratorKernelVV.h
    Kernels/NiPSAlignedQuadTextureKernel/NiPSAlignedQuadTextureKernel.h
    Kernels/NiPSFacingQuadGeneratorKernel/NiPSFacingQuadGeneratorKernel.h
    Kernels/NiPSSimulatorCollidersKernel/NiPSSimulatorCollidersKernel.h
    Kernels/NiPSSimulatorFinalKernel/NiPSSimulatorFinalKernel.h
    Kernels/NiPSSimulatorForcesKernel/NiPSSimulatorForcesKernel.h
    Kernels/NiPSSimulatorGeneralKernel/NiPSSimulatorGeneralKernel.h
    Kernels/NiPSSimulatorMeshAlignKernelFF/NiPSSimulatorMeshAlignKernelFF.cpp
    Kernels/NiPSSimulatorMeshAlignKernelFV/NiPSSimulatorMeshAlignKernelFV.cpp
    Kernels/NiPSSimulatorMeshAlignKernelVF/NiPSSimulatorMeshAlignKernelVF.cpp
    Kernels/NiPSSimulatorMeshAlignKernelVV/NiPSSimulatorMeshAlignKernelVV.cpp
    Kernels/NiPSAlignedQuadGeneratorKernelFF/NiPSAlignedQuadGeneratorKernelFF.cpp
    Kernels/NiPSAlignedQuadGeneratorKernelFV/NiPSAlignedQuadGeneratorKernelFV.cpp
    Kernels/NiPSAlignedQuadGeneratorKernelVF/NiPSAlignedQuadGeneratorKernelVF.cpp
    Kernels/NiPSAlignedQuadGeneratorKernelVV/NiPSAlignedQuadGeneratorKernelVV.cpp
    Kernels/NiPSAlignedQuadTextureKernel/NiPSAlignedQuadTextureKernel.cpp
    Kernels/NiPSFacingQuadGeneratorKernel/NiPSFacingQuadGeneratorKernel.cpp
    Kernels/NiPSSimulatorCollidersKernel/NiPSSimulatorCollidersKernel.cpp
    Kernels/NiPSSimulatorFinalKernel/NiPSSimulatorFinalKernel.cpp
    Kernels/NiPSSimulatorForcesKernel/NiPSSimulatorForcesKernel.cpp
    Kernels/NiPSSimulatorGeneralKernel/NiPSSimulatorGeneralKernel.cpp
    Kernels/NiPSSimulatorMeshAlignKernelFF/NiPSSimulatorMeshAlignKernelFF.cpp
    Kernels/NiPSSimulatorMeshAlignKernelFV/NiPSSimulatorMeshAlignKernelFV.cpp
    Kernels/NiPSSimulatorMeshAlignKernelVF/NiPSSimulatorMeshAlignKernelVF.cpp
    Kernels/NiPSSimulatorMeshAlignKernelVV/NiPSSimulatorMeshAlignKernelVV.cpp

    _Deprecated/NiMeshParticleSystem.cpp
    _Deprecated/NiMeshParticleSystem.h
    _Deprecated/NiMeshPSysData.cpp
    _Deprecated/NiMeshPSysData.h
    _Deprecated/NiMeshPSysData.inl
    _Deprecated/NiParticleInfo.cpp
    _Deprecated/NiParticleInfo.h
    _Deprecated/NiParticleSystem.cpp
    _Deprecated/NiParticleSystem.h
    _Deprecated/NiParticleSystem.inl
    _Deprecated/NiPSysAgeDeathModifier.cpp
    _Deprecated/NiPSysAgeDeathModifier.h
    _Deprecated/NiPSysAgeDeathModifier.inl
    _Deprecated/NiPSysAirFieldAirFrictionCtlr.cpp
    _Deprecated/NiPSysAirFieldAirFrictionCtlr.h
    _Deprecated/NiPSysAirFieldInheritVelocityCtlr.cpp
    _Deprecated/NiPSysAirFieldInheritVelocityCtlr.h
    _Deprecated/NiPSysAirFieldModifier.cpp
    _Deprecated/NiPSysAirFieldModifier.h
    _Deprecated/NiPSysAirFieldModifier.inl
    _Deprecated/NiPSysAirFieldSpreadCtlr.cpp
    _Deprecated/NiPSysAirFieldSpreadCtlr.h
    _Deprecated/NiPSysBombModifier.cpp
    _Deprecated/NiPSysBombModifier.h
    _Deprecated/NiPSysBombModifier.inl
    _Deprecated/NiPSysBoundUpdateModifier.cpp
    _Deprecated/NiPSysBoundUpdateModifier.h
    _Deprecated/NiPSysBoundUpdateModifier.inl
    _Deprecated/NiPSysBoxEmitter.cpp
    _Deprecated/NiPSysBoxEmitter.h
    _Deprecated/NiPSysBoxEmitter.inl
    _Deprecated/NiPSysCollider.cpp
    _Deprecated/NiPSysCollider.h
    _Deprecated/NiPSysCollider.inl
    _Deprecated/NiPSysColliderManager.cpp
    _Deprecated/NiPSysColliderManager.h
    _Deprecated/NiPSysColliderManager.inl
    _Deprecated/NiPSysColorModifier.cpp
    _Deprecated/NiPSysColorModifier.h
    _Deprecated/NiPSysColorModifier.inl
    _Deprecated/NiPSysCylinderEmitter.cpp
    _Deprecated/NiPSysCylinderEmitter.h
    _Deprecated/NiPSysCylinderEmitter.inl
    _Deprecated/NiPSysData.cpp
    _Deprecated/NiPSysData.h
    _Deprecated/NiPSysData.inl
    _Deprecated/NiPSysDragFieldModifier.cpp
    _Deprecated/NiPSysDragFieldModifier.h
    _Deprecated/NiPSysDragFieldModifier.inl
    _Deprecated/NiPSysDragModifier.cpp
    _Deprecated/NiPSysDragModifier.h
    _Deprecated/NiPSysDragModifier.inl
    _Deprecated/NiPSysEmitter.cpp
    _Deprecated/NiPSysEmitter.h
    _Deprecated/NiPSysEmitter.inl
    _Deprecated/NiPSysEmitterCtlr.cpp
    _Deprecated/NiPSysEmitterCtlr.h
    _Deprecated/NiPSysEmitterCtlrData.cpp
    _Deprecated/NiPSysEmitterCtlrData.h
    _Deprecated/NiPSysEmitterCtlrData.inl
    _Deprecated/NiPSysEmitterDeclinationCtlr.cpp
    _Deprecated/NiPSysEmitterDeclinationCtlr.h
    _Deprecated/NiPSysEmitterDeclinationVarCtlr.cpp
    _Deprecated/NiPSysEmitterDeclinationVarCtlr.h
    _Deprecated/NiPSysEmitterInitialRadiusCtlr.cpp
    _Deprecated/NiPSysEmitterInitialRadiusCtlr.h
    _Deprecated/NiPSysEmitterLifeSpanCtlr.cpp
    _Deprecated/NiPSysEmitterLifeSpanCtlr.h
    _Deprecated/NiPSysEmitterPlanarAngleCtlr.cpp
    _Deprecated/NiPSysEmitterPlanarAngleCtlr.h
    _Deprecated/NiPSysEmitterPlanarAngleVarCtlr.cpp
    _Deprecated/NiPSysEmitterPlanarAngleVarCtlr.h
    _Deprecated/NiPSysEmitterSpeedCtlr.cpp
    _Deprecated/NiPSysEmitterSpeedCtlr.h
    _Deprecated/NiPSysFieldAttenuationCtlr.cpp
    _Deprecated/NiPSysFieldAttenuationCtlr.h
    _Deprecated/NiPSysFieldMagnitudeCtlr.cpp
    _Deprecated/NiPSysFieldMagnitudeCtlr.h
    _Deprecated/NiPSysFieldMaxDistanceCtlr.cpp
    _Deprecated/NiPSysFieldMaxDistanceCtlr.h
    _Deprecated/NiPSysFieldModifier.cpp
    _Deprecated/NiPSysFieldModifier.h
    _Deprecated/NiPSysFieldModifier.inl
    _Deprecated/NiPSysGravityFieldModifier.cpp
    _Deprecated/NiPSysGravityFieldModifier.h
    _Deprecated/NiPSysGravityFieldModifier.inl
    _Deprecated/NiPSysGravityModifier.cpp
    _Deprecated/NiPSysGravityModifier.h
    _Deprecated/NiPSysGravityModifier.inl
    _Deprecated/NiPSysGravityStrengthCtlr.cpp
    _Deprecated/NiPSysGravityStrengthCtlr.h
    _Deprecated/NiPSysGrowFadeModifier.cpp
    _Deprecated/NiPSysGrowFadeModifier.h
    _Deprecated/NiPSysGrowFadeModifier.inl
    _Deprecated/NiPSysInitialRotAngleCtlr.cpp
    _Deprecated/NiPSysInitialRotAngleCtlr.h
    _Deprecated/NiPSysInitialRotAngleVarCtlr.cpp
    _Deprecated/NiPSysInitialRotAngleVarCtlr.h
    _Deprecated/NiPSysInitialRotSpeedCtlr.cpp
    _Deprecated/NiPSysInitialRotSpeedCtlr.h
    _Deprecated/NiPSysInitialRotSpeedVarCtlr.cpp
    _Deprecated/NiPSysInitialRotSpeedVarCtlr.h
    _Deprecated/NiPSysMeshEmitter.cpp
    _Deprecated/NiPSysMeshEmitter.h
    _Deprecated/NiPSysMeshEmitter.inl
    _Deprecated/NiPSysMeshUpdateModifier.cpp
    _Deprecated/NiPSysMeshUpdateModifier.h
    _Deprecated/NiPSysMeshUpdateModifier.inl
    _Deprecated/NiPSysModifier.cpp
    _Deprecated/NiPSysModifier.h
    _Deprecated/NiPSysModifier.inl
    _Deprecated/NiPSysModifierActiveCtlr.cpp
    _Deprecated/NiPSysModifierActiveCtlr.h
    _Deprecated/NiPSysModifierBoolCtlr.cpp
    _Deprecated/NiPSysModifierBoolCtlr.h
    _Deprecated/NiPSysModifierCtlr.cpp
    _Deprecated/NiPSysModifierCtlr.h
    _Deprecated/NiPSysModifierCtlr.inl
    _Deprecated/NiPSysModifierFloatCtlr.cpp
    _Deprecated/NiPSysModifierFloatCtlr.h
    _Deprecated/NiPSysPlanarCollider.cpp
    _Deprecated/NiPSysPlanarCollider.h
    _Deprecated/NiPSysPlanarCollider.inl
    _Deprecated/NiPSysPositionModifier.cpp
    _Deprecated/NiPSysPositionModifier.h
    _Deprecated/NiPSysRadialFieldModifier.cpp
    _Deprecated/NiPSysRadialFieldModifier.h
    _Deprecated/NiPSysRadialFieldModifier.inl
    _Deprecated/NiPSysResetOnLoopCtlr.cpp
    _Deprecated/NiPSysResetOnLoopCtlr.h
    _Deprecated/NiPSysRotationModifier.cpp
    _Deprecated/NiPSysRotationModifier.h
    _Deprecated/NiPSysRotationModifier.inl
    _Deprecated/NiPSysSpawnModifier.cpp
    _Deprecated/NiPSysSpawnModifier.h
    _Deprecated/NiPSysSpawnModifier.inl
    _Deprecated/NiPSysSphereEmitter.cpp
    _Deprecated/NiPSysSphereEmitter.h
    _Deprecated/NiPSysSphereEmitter.inl
    _Deprecated/NiPSysSphericalCollider.cpp
    _Deprecated/NiPSysSphericalCollider.h
    _Deprecated/NiPSysSphericalCollider.inl
    _Deprecated/NiPSysTurbulenceFieldModifier.cpp
    _Deprecated/NiPSysTurbulenceFieldModifier.h
    _Deprecated/NiPSysTurbulenceFieldModifier.inl
    _Deprecated/NiPSysUpdateCtlr.cpp
    _Deprecated/NiPSysUpdateCtlr.h
    _Deprecated/NiPSysVolumeEmitter.cpp
    _Deprecated/NiPSysVolumeEmitter.h
    _Deprecated/NiPSysVolumeEmitter.inl
    _Deprecated/NiPSysVortexFieldModifier.cpp
    _Deprecated/NiPSysVortexFieldModifier.h
    _Deprecated/NiPSysVortexFieldModifier.inl
)

target_include_directories(NiParticle PUBLIC
    ${CMAKE_CURRENT_LIST_DIR} 
    Kernels/NiPSAlignedQuadGeneratorKernelFF
    Kernels/NiPSAlignedQuadGeneratorKernelFV
    Kernels/NiPSAlignedQuadGeneratorKernelVF
    Kernels/NiPSAlignedQuadGeneratorKernelVV
    Kernels/NiPSAlignedQuadTextureKernel
    Kernels/NiPSFacingQuadGeneratorKernel
    Kernels/NiPSSimulatorCollidersKernel
    Kernels/NiPSSimulatorFinalKernel
    Kernels/NiPSSimulatorForcesKernel
    Kernels/NiPSSimulatorGeneralKernel
    Kernels/NiPSSimulatorMeshAlignKernelFF
    Kernels/NiPSSimulatorMeshAlignKernelFV
    Kernels/NiPSSimulatorMeshAlignKernelVF
    Kernels/NiPSSimulatorMeshAlignKernelVV
    PRIVATE
    _Deprecated
)

set_target_properties(NiParticle PROPERTIES FOLDER "${GB3_PREFIX}CoreRuntime/EngineLibs")
target_precompile_headers(NiParticle PRIVATE NiParticlePCH.h)
target_link_libraries(NiParticle PUBLIC NiAnimation)
