add_library(NiTerrain STATIC
    NiDynamicStreamCache.cpp
    NiDynamicStreamCache.h
    NiFragmentLighting.cpp
    NiFragmentLighting.h
    NiFragmentLighting.inl
    NiFragmentOperations.cpp
    NiFragmentOperations.h
    NiIndex.cpp
    NiIndex.h
    NiIndex.inl
    NiMetaData.cpp
    NiMetaData.h
    NiMetaData.inl
    NiRay.h
    NiRay.inl
    NiSurface.cpp
    NiSurface.h
    NiSurface.inl
    NiSurfacePackage.cpp
    NiSurfacePackage.h
    NiTerrain.cpp
    NiTerrain.h
    NiTerrain.inl
    NiTerrainAssetReference.cpp
    NiTerrainAssetReference.h
    NiTerrainAssetReference.inl
    NiTerrainCell.cpp
    NiTerrainCell.h
    NiTerrainCell.inl
    NiTerrainCellLeaf.cpp
    NiTerrainCellLeaf.h
    NiTerrainCellLeaf.inl
    NiTerrainCellNode.cpp
    NiTerrainCellNode.h
    NiTerrainCellNode.inl
    NiTerrainCellShaderData.cpp
    NiTerrainCellShaderData.h
    NiTerrainConditionVariable.cpp
    NiTerrainConditionVariable.h
    NiTerrainConditionVariable.inl
    NiTerrainConfiguration.cpp
    NiTerrainConfiguration.h
    NiTerrainConfiguration.inl
    NiTerrainCullingProcess.cpp
    NiTerrainCullingProcess.h
    NiTerrainDataSnapshot.cpp
    NiTerrainDataSnapshot.h
    NiTerrainDataSnapshot.inl
    NiTerrainDecal.cpp
    NiTerrainDecal.h
    NiTerrainDecalManager.cpp
    NiTerrainDecalManager.h
    NiTerrainDeformationBuffer.h
    NiTerrainDeformationBuffer.inl
    NiTerrainEvents.cpp
    NiTerrainEvents.h
    NiTerrainEvents.inl
    NiTerrainFile.cpp
    NiTerrainFile.h
    NiTerrainFile.inl
    NiTerrainFileVersion0.cpp
    NiTerrainFileVersion0.h
    NiTerrainFileVersion1.cpp
    NiTerrainFileVersion1.h
    NiTerrainFileVersion1.inl
    NiTerrainFileVersion2.cpp
    NiTerrainFileVersion2.h
    NiTerrainFileVersion2.inl
    NiTerrainFileVersion3.cpp
    NiTerrainFileVersion3.h
    NiTerrainFileVersion3.inl
    NiTerrainLib.h
    NiTerrainLibType.h
    NiTerrainMaterial.cpp
    NiTerrainMaterial.h
    NiTerrainMaterial.inl
    NiTerrainMaterialDescriptor.cpp
    NiTerrainMaterialDescriptor.h
    NiTerrainMaterialPixelDescriptor.cpp
    NiTerrainMaterialPixelDescriptor.h
    NiTerrainMaterialVertexDescriptor.cpp
    NiTerrainMaterialVertexDescriptor.h
    NiTerrainPCH.h
    NiTerrainPhysXTypes.h
    NiTerrainPhysXTypes.inl
    NiTerrainRandomAccessIterator.h
    NiTerrainRandomAccessIterator.inl
    NiTerrainResourceManager.cpp
    NiTerrainResourceManager.h
    NiTerrainResourceManager.inl
    NiTerrainSDM.cpp
    NiTerrainSDM.h
    NiTerrainSector.cpp
    NiTerrainSector.h
    NiTerrainSector.inl
    NiTerrainSectorData.cpp
    NiTerrainSectorData.h
    NiTerrainSectorData.inl
    NiTerrainSectorFile.cpp
    NiTerrainSectorFile.h
    NiTerrainSectorFile.inl
    NiTerrainSectorFileDeveloper.cpp
    NiTerrainSectorFileDeveloper.h
    NiTerrainSectorFileDeveloper.inl
    NiTerrainSectorFileVersion1.cpp
    NiTerrainSectorFileVersion1.h
    NiTerrainSectorFileVersion2.cpp
    NiTerrainSectorFileVersion2.h
    NiTerrainSectorFileVersion3.cpp
    NiTerrainSectorFileVersion3.h
    NiTerrainSectorFileVersion4.cpp
    NiTerrainSectorFileVersion4.h
    NiTerrainSectorFileVersion5.cpp
    NiTerrainSectorFileVersion5.h
    NiTerrainSectorFileVersion5.inl
    NiTerrainSectorFileVersion6.cpp
    NiTerrainSectorFileVersion6.h
    NiTerrainSectorIO.cpp
    NiTerrainSectorPager.cpp
    NiTerrainSectorPager.h
    NiTerrainSectorPager.inl
    NiTerrainSectorSelector.cpp
    NiTerrainSectorSelector.h
    NiTerrainSectorSelector.inl
    NiTerrainSectorSelectorDefault.cpp
    NiTerrainSectorSelectorDefault.h
    NiTerrainSectorSelectorDefault.inl
    NiTerrainShadowClickValidator.cpp
    NiTerrainShadowClickValidator.h
    NiTerrainShadowVisitor.cpp
    NiTerrainShadowVisitor.h
    NiTerrainStreamingListenerList.cpp
    NiTerrainStreamingListenerList.h
    NiTerrainStreamingManager.cpp
    NiTerrainStreamingManager.h
    NiTerrainStreamingTask.cpp
    NiTerrainStreamingTask.h
    NiTerrainStreamingTask.inl
    NiTerrainStreamLocks.cpp
    NiTerrainStreamLocks.h
    NiTerrainSurfaceLibrary.cpp
    NiTerrainSurfaceLibrary.h
    NiTerrainSurfaceLibrary.inl
    NiTerrainSurfacePackageFile.cpp
    NiTerrainSurfacePackageFile.h
    NiTerrainSurfacePackageFile.inl
    NiTerrainSurfacePackageFileVersion0.cpp
    NiTerrainSurfacePackageFileVersion0.h
    NiTerrainSurfacePackageFileVersion1.cpp
    NiTerrainSurfacePackageFileVersion1.h
    NiTerrainTaskProcessor.cpp
    NiTerrainTaskProcessor.h
    NiTerrainTaskProcessor.inl
    NiTerrainUtils.cpp
    NiTerrainUtils.h
    NiTerrainUtils.inl
    NiTerrainXMLHelpers.cpp
    NiTerrainXMLHelpers.h
    NiTextureRegion.h
    NiTextureRegion.inl
    NiUCharPool.h
    NiUCharPool.inl
    NiWater.cpp
    NiWater.h
    NiWater.inl
    NiWaterMaterial.cpp
    NiWaterMaterial.h
    NiWaterMaterialDescriptor.h
    NiWaterMaterialPixelDescriptor.cpp
    NiWaterMaterialPixelDescriptor.h
    NiWaterMaterialVertexDescriptor.cpp
    NiWaterMaterialVertexDescriptor.h

    Win32/NiSurface_Win32.cpp

    NiFragmentOperationsNodeLibrary/NiFragmentOperationsNodeLibrary.cpp
    NiFragmentOperationsNodeLibrary/NiFragmentOperationsNodeLibrary.h
    NiTerrainMaterialNodeLibrary/NiTerrainMaterialNodeLibrary.cpp
    NiTerrainMaterialNodeLibrary/NiTerrainMaterialNodeLibrary.h
    NiWaterMaterialNodeLibrary/NiWaterMaterialNodeLibrary.cpp
    NiWaterMaterialNodeLibrary/NiWaterMaterialNodeLibrary.h
)

target_include_directories(NiTerrain PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/NiFragmentOperationsNodeLibrary
    ${CMAKE_CURRENT_SOURCE_DIR}/NiTerrainMaterialNodeLibrary
    ${CMAKE_CURRENT_SOURCE_DIR}/NiWaterMaterialNodeLibrary
)
target_link_libraries(NiTerrain PUBLIC NiCollision NiDX9Renderer)
set_target_properties(NiTerrain PROPERTIES FOLDER "${GB3_PREFIX}CoreRuntime/EngineLibs")
target_precompile_headers(NiTerrain PRIVATE NiTerrainPCH.h)
